...

            <androidx.cardview.widget.CardView
                android:id="@+id/clean_event_details_activity_image_container"
                android:layout_width="225dp"
                android:layout_height="225dp"
...

            <TextView
                android:id="@+id/clean_event_details_activity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clean_event_details_activity_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:textSize="15sp"
                    android:textStyle="italic"
...

            <TextView
                android:id="@+id/clean_event_details_activity_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/clean_event_details_activity_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

               <TextView
                   android:id="@+id/clean_event_details_activity_participants_number"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
...

               <Button
                   android:id="@+id/clean_event_details_activity_participate_button"
                   style="@style/Widget.MaterialComponents.Button.TextButton"
                   android:layout_width="wrap_content"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clean_event_details_activity_description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="15sp"
                    android:textStyle="italic"
...

                <TextView
                    android:id="@+id/clean_event_details_activity_createBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/clean_event_details_activity_createDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clean_event_details_activity_comments_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:textSize="15sp"
                    android:textStyle="italic"
...

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/clean_event_details_activity_comments_recycler_view"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/clean_event_details_activity_comments_editText_container"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
...

                        <EditText
                            android:id="@+id/clean_event_details_activity_comments_editText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
...
                            android:hint="@string/pls_enter_a_comment"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/clean_event_details_activity_send_comment_button"
                            app:layout_constraintStart_toStartOf="parent"
                            android:autofillHints="no"
...
